--- a/CLIENT SITE/cms-site/src/index.css
+++ b/CLIENT SITE/cms-site/src/index.css
@@ -9,7 +9,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #f1dada;
+  background-color: #034a23;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
