--- a/CLIENT SITE/cms-site/src/index.css
+++ b/CLIENT SITE/cms-site/src/index.css
@@ -8,8 +8,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #034a23;
+  color: rgba(245, 245, 245, 0.87);
+  background-color: #21ab9d;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
