--- a/CLIENT SITE/cms-site/src/index.css
+++ b/CLIENT SITE/cms-site/src/index.css
@@ -7,9 +7,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  ccolor-scheme: light dark;
   color: rgba(245, 245, 245, 0.87);
-  background-color: #21ab9d;
+  background-image: url("https://i1.sndcdn.com/artworks-p7ulwRZyHvqHVPzg-A0YRaw-t500x500.jpg");
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
